movie talk account

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <input name="username" type="text" placeholder="email or phone number" />
         <input name="password" type="password" placeholder="password" />
         <input type="submit" value="Log in" />
-        <a href="#">find kokoa Account or Password</a>
+        <a href="#">find Movietalk Account or Password</a>
 
     </form>
 
